[package]
name = "grpc-client"
description = "grpc-client."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/grpc-client"
documentation = "https://docs.rs/grpc-client"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.58"
base64 = "0.20.0"
crossbeam-queue = "0.3.5"
dashmap = "5.3.4"
dirs-next = "2.0.0"
fs-err = "2.7.0"
futures = "0.3.21"
http = "0.2.8"
hyper-rustls = { version = "0.23.0", features = ["http2"] }
iter-set = "2.0.2"
once_cell = "1.12.1"
open = "3.0.1"
prost-reflect = { version = "0.10.1", features = ["serde", "text-format"] }
rand = "0.8.5"
regex = "1.5.6"
rustls = { version = "0.20.2", features = ["dangerous_configuration"] }
serde-transcode = "1.1.1"
serde_json = "1.0.82"
tokio-stream = "0.1.9"
tower = "0.4.12"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
webpki = "0.22.0"
which = "4.2.5"
hyper = "0.14.19"
protox = "0.2.0"

[dependencies.druid]
git = "https://github.com/linebender/druid.git"
branch = "master"
default-features = false
features = ["im", "svg", "serde", "x11"]

[dependencies.tonic]
version = "0.8.3"
default-features = false
features = ["transport", "tls", "tls-roots"]

[dependencies.tokio]
version = "1.19.2"
features = ["rt-multi-thread", "sync", "fs"]

[dependencies.serde]
version = "1.0.138"
features = ["derive", "rc"]

[dependencies.kurbo]
version = "0.9.0"
features = ["serde"]

[dependencies.im]
version = "15.1.0"
features = ["serde"]

[build-dependencies]
anyhow = "1.0.58"

[build-dependencies.vergen]
version = "7.5.0"
default-features = false
features = ["git"]
