[package]
name = "lanquetta"
description = "A GUI application for calling gRPC services."
version = "0.6.1"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/lanquetta"
documentation = "https://docs.rs/lanquetta"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
build = "build.rs"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "img/*",
    "build.rs",
    "src/**/*.rs",
    "!src/**/tests.rs",
]

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
crossbeam-queue = "0.3.8"
dashmap = "5.4.0"
dirs-next = "2.0.0"
fs-err = "2.9.0"
futures = "0.3.28"
http = "0.2.9"
hyper = "0.14.26"
hyper-rustls = { version = "0.24.0", features = ["http2"] }
iter-set = "2.0.2"
once_cell = "1.18.0"
open = "4.1.0"
prost-reflect = { version = "0.11.4", features = ["serde", "text-format"] }
protox = "0.3.3"
rand = "0.8.5"
regex = "1.8.3"
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"
serde_json = "1.0.96"
serde-transcode = "1.1.1"
tokio-stream = "0.1.14"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
webpki = "0.22.0"

[dependencies.druid]
version = "0.8.3"
default-features = false
features = ["im", "svg", "serde", "x11"]

[dependencies.tonic]
version = "0.9.2"
default-features = false
features = ["transport"]

[dependencies.tokio]
version = "1.28.2"
features = ["rt-multi-thread", "sync", "fs"]

[dependencies.serde]
version = "1.0.163"
features = ["derive", "rc"]

[dependencies.kurbo]
version = "0.9.5"
features = ["serde"]

[dependencies.im]
version = "15.1.0"
features = ["serde"]

[build-dependencies]
anyhow = "1.0.71"

[build-dependencies.vergen]
version = "8.2.1"
features = ["git", "gitoxide"]
