[package]
name = "lanquetta"
description = "A GUI application for calling gRPC services."
version = "0.6.3"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/lanquetta"
documentation = "https://docs.rs/lanquetta"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
build = "build.rs"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "img/*",
    "build.rs",
    "src/**/*.rs",
    "!src/**/tests.rs",
    "proto/**/*.proto",
    "googleapis/google/rpc/status.proto",
    "googleapis/google/rpc/error_details.proto",
    "grpc-proto/grpc/health/v1/health.proto",
    "grpc-proto/grpc/reflection/v1/reflection.proto",
]

[[bin]]
name = "lanquetta"
test = false

[lib]
name = "lanquetta"
test = true
doctest = false

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
crossbeam-queue = "0.3.8"
dashmap = "5.4.0"
dirs = "5.0.1"
druid = { version = "0.8.3", default-features = false, features = [
    "im",
    "svg",
    "serde",
    "gtk",
    "raw-win-handle"
] }
fs-err = "2.9.0"
futures = "0.3.28"
http = "0.2.9"
hyper = "0.14.26"
hyper-rustls = { version = "0.24.0", features = ["http2"] }
iter-set = "2.0.2"
im = { version = "15.1.0", features = ["serde"] }
once_cell = "1.18.0"
open = "5.0.0"
prost-reflect = { version = "0.11.4", features = ["serde", "text-format"] }
protox = "0.4.0"
rand = "0.8.5"
regex = "1.8.3"
rustls = { version = "0.21.5", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.96"
serde-transcode = "1.1.1"
tokio-stream = "0.1.14"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "sync", "fs", "process"] }
tonic = { version = "0.9.2", default-features = false, features = [
    "transport"
] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
webpki = "0.22.0"
windows = { version = "0.48.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_Memory"] }
time = { version = "0.3.29", default-features = false, features = ["parsing", "serde", "serde-well-known"] }
shell-words = "1.1.0"
http-serde = "1.1.2"
tonic-reflection = "0.9.2"

[build-dependencies]
anyhow = "1.0.71"
protox = "0.4.0"
vergen = { version = "8.2.4", features = ["git", "gitoxide"] }
windows = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging"] }
winres = "0.1.12"

[patch.crates-io]
druid = { git = "https://github.com/andrewhickman/druid", branch = "master" }
