[package]
name = "grpc-client-protobuf-tests"
description = "grpc-client"
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/grpc-client"
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[dependencies]
grpc-client-protobuf = { path = "../protobuf/" }
once_cell = "1.8.0"
prost = "0.9.0"
serde_json = "1.0.71"

[build-dependencies]
prost-build = "0.9.0"

[dev-dependencies]
assert-json-diff = "2.0.1"
base64 = "0.13.0"
