[package]
name = "grpc-client-protobuf"
description = "grpc-client"
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/grpc-client"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
fs-err = "2.6.0"
http = "0.2.4"
prost = { version = "0.8.0", default-features = false, features = ["std"] }
prost-types = "0.8.0"
bytes = "1.1.0"
serde-transcode = "1.1.1"
serde_json = "1.0.67"
slab = "0.4.4"
heck = "0.4.0"

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = ["std"]

[dependencies.druid]
git = "https://github.com/linebender/druid.git"
branch = "master"
features = []

[dependencies.serde]
version = "1.0.128"
features = ["derive"]

[dependencies.tonic]
version = "0.5.2"
default-features = false
features = []
